[gd_scene load_steps=11 format=3 uid="uid://bfuicevmcynv8"]

[ext_resource type="Script" path="res://Scripts/start_menu.gd" id="1_gdwp3"]
[ext_resource type="Texture2D" uid="uid://cujtp302kb26p" path="res://Artworks/bg.png" id="2_bkqxu"]
[ext_resource type="FontFile" uid="uid://c51wwnysc63o7" path="res://Artworks/Fonts/GeneraleStation-Regular.otf" id="3_doetv"]
[ext_resource type="Texture2D" uid="uid://npx1qs4umlof" path="res://Artworks/HUD/start.png" id="3_xv4s4"]
[ext_resource type="Texture2D" uid="uid://52ccvxvt2mo2" path="res://Artworks/HUD/exit.png" id="4_fx13l"]

[sub_resource type="LabelSettings" id="LabelSettings_p3r00"]
font = ExtResource("3_doetv")
font_size = 100
outline_size = 40
outline_color = Color(0.027451, 0.627451, 0.278431, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m8v0v"]
font = ExtResource("3_doetv")
font_size = 34

[sub_resource type="Animation" id="Animation_2d3ut"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_5sovr"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vlvu0"]
_data = {
"fade_in": SubResource("Animation_2d3ut"),
"fade_out": SubResource("Animation_5sovr")
}

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gdwp3")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -882.0
offset_top = -761.0
offset_right = 792.0
offset_bottom = 893.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bkqxu")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.5
offset_top = -126.5
offset_right = 213.5
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "JUMP VOLLY"
label_settings = SubResource("LabelSettings_p3r00")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "by Palash Bauri"
label_settings = SubResource("LabelSettings_m8v0v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Start_Button" type="TextureButton" parent="VBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_xv4s4")

[node name="Exit_Button" type="TextureButton" parent="VBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_fx13l")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Sound_Button" type="CheckBox" parent="VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_doetv")
theme_override_font_sizes/font_size = 22
text = "[Enable Sound]"
flat = true

[node name="HowToPlay_Button" type="Button" parent="VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_doetv")
theme_override_font_sizes/font_size = 22
text = "[How To Play]"
flat = true

[node name="About_Button" type="Button" parent="VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_doetv")
theme_override_font_sizes/font_size = 22
text = "[About]"
flat = true

[node name="Website_Button" type="Button" parent="VBoxContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_doetv")
theme_override_font_sizes/font_size = 22
text = "[Website]
"
flat = true

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vlvu0")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -551.0
offset_top = -648.0
offset_right = 487.0
offset_bottom = 703.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="VBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer/Start_Button" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer2/VBoxContainer/MarginContainer/HBoxContainer/Exit_Button" to="." method="_on_exit_button_button_down"]
[connection signal="toggled" from="VBoxContainer2/MarginContainer/HBoxContainer/Sound_Button" to="." method="_on_sound_button_toggled"]
[connection signal="button_down" from="VBoxContainer2/MarginContainer/HBoxContainer/HowToPlay_Button" to="." method="_on_how_to_play_button_button_down"]
[connection signal="button_down" from="VBoxContainer2/MarginContainer/HBoxContainer/About_Button" to="." method="_on_about_button_button_down"]
[connection signal="button_down" from="VBoxContainer2/MarginContainer/HBoxContainer/Website_Button" to="." method="_on_website_button_button_down"]
